@@ -44,12 +44,12 @@ Example::
 	CMS_PLACEHOLDER_CONF = {
 		'content': {
 			'plugins': ('TextPlugin', 'PicturePlugin'),
-			'extra_context': {"theme":"wide"},
+			'extra_context': {"width":640},
 			'name':gettext("Content")
 		},
 		'right-column': {
 			"plugins": ('TeaserPlugin', 'LinkPlugin'),
-			"extra_context": {"theme":"small"},
+			"extra_context": {"width":280},
 			'name':gettext("Right Column")
 			'limits': {
 				'global': 2,
